# CitySimulator

./: .exrc  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  build.sh  game.cpp
CitySimulator/: CMakeLists.txt  resource.h
CitySimulator/cmake_modules/: FindBox2D.cmake  FindSFML.cmake
CitySimulator/include/: PackingTreeNode.h  SFMLDebugDraw.h  ai.hpp  animation.hpp  bodydata.hpp  building.hpp  config.hpp  constants.hpp  ecs.hpp  entity.hpp  events.hpp  game.hpp  gamestate.hpp  input.hpp  logger.hpp  maploader.hpp  services.hpp  state.hpp  utils.hpp  world.hpp
CitySimulator/include/service/: animation_service.hpp  base_service.hpp  camera_service.hpp  config_service.hpp  entity_service.hpp  event_service.hpp  input_service.hpp  locator.hpp  locator.ipp  logging_service.hpp  render_service.hpp  world_service.hpp
CitySimulator/include/state/: gamestate.hpp  state.hpp
CitySimulator/lib/SFML-2.3/doc/: sfml.chm
CitySimulator/lib/SFML-2.3/doc/html/: AlResource_8hpp_source.html  Audio_2Export_8hpp_source.html  Audio_8hpp_source.html  BlendMode_8hpp_source.html  CircleShape_8hpp_source.html  Clock_8hpp_source.html  Color_8hpp_source.html  Config_8hpp_source.html  ContextSettings_8hpp_source.html  Context_8hpp_source.html  ConvexShape_8hpp_source.html  Drawable_8hpp_source.html  Err_8hpp_source.html  Event_8hpp_source.html  FileInputStream_8hpp_source.html  Font_8hpp_source.html  Ftp_8hpp_source.html  GlResource_8hpp_source.html  Glyph_8hpp_source.html  Graphics_2Export_8hpp_source.html  Graphics_8hpp_source.html  Http_8hpp_source.html  Image_8hpp_source.html  InputSoundFile_8hpp_source.html  InputStream_8hpp_source.html  IpAddress_8hpp_source.html  Joystick_8hpp_source.html  Keyboard_8hpp_source.html  Listener_8hpp_source.html  Lock_8hpp_source.html  Main_8hpp_source.html  MemoryInputStream_8hpp_source.html  Mouse_8hpp_source.html  Music_8hpp_source.html  Mutex_8hpp_source.html  Network_2Export_8hpp_source.html  Network_8hpp_source.html  NonCopyable_8hpp_source.html  OpenGL_8hpp_source.html  OutputSoundFile_8hpp_source.html  (+351 more)
CitySimulator/lib/SFML-2.3/lib/: sfml-audio-s.lib  sfml-graphics-s.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-s-d.lib  sfml-network-s.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-window-s-d.lib  sfml-window-s.lib
CitySimulator/res/: config.json  config.yml  humans.xml  humans.yml  reference.json  vehicles.xml  vehicles.yml
CitySimulator/res/config/: config.yml
CitySimulator/res/entities/: entities.json
CitySimulator/res/entities/humans/: humans.json
CitySimulator/res/entities/vehicles/: vehicles.json
CitySimulator/res/world/: collision_test.tmx  small.tmx  world.tmx
CitySimulator/res/world/buildings/: double.tmx  single.tmx  single_upstairs.tmx
CitySimulator/spike/rotation/: rotation.cpp  rotation.hpp
CitySimulator/src/: SFMLDebugDraw.cpp  ai.cpp  ai.hpp  animation.cpp  animation.hpp  building.cpp  buttonselection.hpp  camera.cpp  config.cpp  config.hpp  constants.cpp  constants.hpp  ecs.cpp  entity.cpp  entity.hpp  events.cpp  fps.cpp  game.cpp  game.hpp  gamestate.cpp  gamestate.hpp  input.cpp  input.hpp  logger.cpp  logger.hpp  maploader.cpp  maploader.hpp  rendering.cpp  rotationspike.hpp  services.cpp  state.hpp  textblock.hpp  tileset.cpp  utils.cpp  utils.hpp  world.cpp  world.hpp  world_render.cpp
CitySimulator/src/entity/: animation.cpp  entity.cpp
CitySimulator/src/entity/ai/: ai.cpp  steering.cpp
CitySimulator/src/entity/ecs/: component.cpp  ecs.cpp  system.cpp
CitySimulator/src/game/: camera.cpp  events.cpp  fps.cpp  game.cpp  gamebase.cpp  input.cpp
CitySimulator/src/state/: gamestate.cpp
CitySimulator/src/util/: config.cpp  constants.cpp  logger.cpp  services.cpp  utils.cpp
CitySimulator/src/world/: bodydata.cpp  building.cpp  maploader.cpp  world.cpp  world_buildings.cpp  world_collisions.cpp  world_interaction.cpp  world_loading.cpp  world_rendering.cpp  world_terrain.cpp
CitySimulator_tests/: CMakeLists.txt
CitySimulator_tests/tests/: CMakeLists.txt  config_tests.cpp  entity_tests.cpp  events_test.cpp  services_test.cpp  test_helpers.hpp  tests.cpp  util.cpp  utils_tests.cpp  world_tests.cpp
CitySimulator_tests/tests/data/: test_config.json  test_entities.json  test_reference_config.json  test_world.tmx
CitySimulator_tests/tests/data/worlds/: buildings.tmx  hub.tmx  multiple-test.tmx  none-double-test.tmx  none-test.tmx  single-test.tmx  tiny.tmx
cmake_modules/: FindYamlCpp.cmake
include/: PackingTreeNode.h  ai.hpp  animation.hpp  config.hpp  constants.hpp  entity.hpp  game.hpp  gamestate.hpp  input.hpp  logger.hpp  maploader.hpp  state.hpp  utils.hpp  world.hpp
res/: config.json  config.yml
res/entities/vehicles/: vehicles.yml
res/world/: small.tmx
spike/rotation/: rotation.hpp
src/: ai.cpp  animation.cpp  config.cpp  constants.cpp  core.cpp  ecs.cpp  entity.cpp  game.cpp  gamestate.cpp  input.cpp  logger.cpp  maploader.cpp  utils.cpp  world.cpp
tests/: CMakeLists.txt
tests/tests/: CMakeLists.txt  util.cpp
